--- a/clase 6.qmd
+++ b/clase 6.qmd
@@ -57,3 +57,112 @@ The `echo: false` option disables the printing of code (only output is displayed
 1. Tener un archivo en formato html llamado `index.html`
 1. Hacer push en repositorio
 1. Activar Github pages
+
+
+
+# Modelos lineales mixtos
+
+## Importar datos
+
+```{r}
+
+source('https://inkaverse.com/setup.r')
+
+
+url <- "https://docs.google.com/spreadsheets/d/15r7ZwcZZHbEgltlF6gSFvCTFA-CFzVBWwg3mFlRyKPs/edit?gid=172957346#gid=172957346"
+
+gs <- url %>% 
+  as_sheets_id()
+
+fb <- gs %>% 
+  range_read("fb")
+
+
+str(fb)
+
+```
+
+## Modelo lineal lfa
+
+```{r}
+modelo <- aov (formula = lfa ~  bloque + riego + geno + riego*geno
+          , data = fb)
+
+anova(modelo)
+
+plot(modelo)
+
+```
+
+### boxplot
+
+```{r}
+
+ggplot(fb, aes(x = geno, y = lfa, colour = riego)) +
+  geom_boxplot(outlier.colour = "red", outlier.shape = 16, outlier.size = 2) +
+  labs(title = "Boxplot con interacción de niveles de riego y genotipo",
+       x = "Interacción Riego y Genotipo",
+       y = "Area Folicar (cm^2)")
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Inclinar etiquetas del eje X
+
+```
+
+## Modelo lineal de hi
+
+```{r}
+modelo <- aov(formula = hi ~  bloque + riego + geno + riego*geno
+          , data = fb)
+
+anova(modelo)
+
+plot(modelo)
+
+```
+
+### boxplot 
+
+
+```{r}
+
+ggplot(fb, aes(x = geno, y = hi, colour = riego)) +
+  geom_boxplot(outlier.colour = "red", outlier.shape = 16, outlier.size = 2) +
+  labs(title = "Boxplot con interacción de niveles de riego y genotipo",
+       x = "Interacción Riego y Genotipo",
+       y = "Indice de Cosecha  (cm^2)")
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Inclinar etiquetas del eje X
+
+```
+
+## Modelo lineal mixto: lfa
+
+
+
+```{r}
+library (lme4)
+library(lmerTest)
+model <- lme4::lmer(lfa ~ riego + geno + riego*geno + (1|bloque), data = fb)
+anova(model)
+
+plot(model)
+
+ol <- boxplot(lfa ~riego*geno, fb)
+ol
+
+```
+
+```{r}
+library (inti)
+modelo <- remove_outliers(data = fb
+                        ,formula = lfa ~ riego + geno + riego*geno + (1|bloque) 
+                        ,plot_diag = T)
+
+model
+```
+
+
+
+
+
+
